fix: responsive issue on mobile due to last commit

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1061,6 +1061,7 @@ ul {
 
   /* Header */
   .header-nav-item {
+    transform: none;
     margin-right: 0;
   }
 
